# Web-Shop-Product-Management

./: Dockerfile  README.md  pyproject.toml  requirements.txt  web_shop.db
src/: app.py  web_shop.db
src/apis/: __init__.py  products.py  prtoducts.py  queries.py  schemas.py  users.py
src/core/: __init__.py  commons.py  logger.py
src/db/: __init__.py  base.py  db.py  models.py
src/users/: __init__.py  auth.py  utils.py
