[tool.poetry]
name = "web-shop-product-management"
version = "0.1.0"
description = ""
authors = ["BK"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["uvicorn"], version = "^0.115.11"}
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlalchemy = "^2.0.38"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.20"
uvicorn = "^0.34.0"
slowapi = "^0.1.9"
bcrypt = "<4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
